--- a/ultralytics/yolo/data/datasets/memryx-update.yaml
+++ b/ultralytics/yolo/data/datasets/memryx-update.yaml
@@ -3,11 +3,11 @@ path: ../data  # dataset root dir
 train: [wider_face_updated/train.txt, wider_face_updated/val.txt, 
 crowd/train.txt, crowd/val.txt,
 AIHUB_updated/valid_train_updated.txt,
-coco_face_from_kpts/train.txt, coco_face_from_kpts/val.txt]  # 89977 images
-val: [coco_face_from_kpts/val.txt]   # 5884 images
-test: [coco_face_from_kpts/val.txt]   # 5884
+coco_face_from_kpts_wholebody/train.txt, coco_face_from_kpts_wholebody/val.txt]  # 82197 images
+val: [coco_face_from_kpts_wholebody/val.txt]
+test: [coco_face_from_kpts_wholebody/val.txt] #2355
 
 # Classes
 names:
   0: person
-  1: bicycle
+  1: face
